Add new dashboard links.

--- a/supply_chains/templates/index.html
+++ b/supply_chains/templates/index.html
@@ -131,4 +131,28 @@
     </div>
 </div>
 
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-one-half">
+        <ul class="govuk-list">
+            <li>
+                <a href="{% quicksight_vulnerability_analysis_countries_dashboard_url %}" class="services-heading govuk-link govuk-!-font-weight-bold">Vulnerability analysis – country lens</a>
+
+                <p class="home-services-para">
+                    View information about the vulnerability of UK imports and Global exports to supply chain disruption from a countries perspective.
+                </p>
+            </li>
+        </ul>
+    </div>
+    <div class="govuk-grid-column-one-half">
+        <ul class="govuk-list">
+            <li>
+                <a href="{% quicksight_vulnerability_analysis_products_dashboard_url %}" class="services-heading govuk-link govuk-!-font-weight-bold">Vulnerability analysis – product lens</a>
+
+                <p class="home-services-para">
+                    View information about the vulnerability of UK imports and Global exports to supply chain disruption from a goods perspective.
+                </p>
+            </li>
+        </ul>
+    </div>
+</div>
 {% endblock %}
