Adding new link - commodity uses by industry. Removing link - vunerability analysis dashboard

--- a/supply_chains/templates/index.html
+++ b/supply_chains/templates/index.html
@@ -121,10 +121,10 @@
     <div class="govuk-grid-column-one-half">
         <ul class="govuk-list">
             <li>
-                <a href="{% quicksight_vulnerability_analysis_dashboard_url %}" class="services-heading govuk-link govuk-!-font-weight-bold">Vulnerability analysis</a>
+                <a href="{% quicksight_commodity_uses_by_industry_dashboard_url %}" class="services-heading govuk-link govuk-!-font-weight-bold">Commodity uses by industry</a>
 
                 <p class="home-services-para">
-                    View information about the vulnerability of UK imports and Global exports to supply chain disruption.
+                    View information about how various goods are used as intermediate inputs by different industries. This is to allow for more contextual analysis to be undertaken on how imported goods are used in the economy.
                 </p>
             </li>
         </ul>
